src/test/ui/pattern/usefulness/slice-patterns.stderr
error[E0004]: non-exhaustive patterns: `&[false, true]` not covered
  --> $DIR/slice-patterns.rs:29:11
   |
LL |     match s2 {
   |           ^^ pattern `&[false, true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false, _, true]` not covered
  --> $DIR/slice-patterns.rs:34:11
   |
LL |     match s3 {
   |           ^^ pattern `&[false, _, true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false, .., true]` not covered
  --> $DIR/slice-patterns.rs:39:11
   |
LL |     match s {
   |           ^ pattern `&[false, .., true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false, _, _]` not covered
  --> $DIR/slice-patterns.rs:46:11
   |
LL |     match s3 {
   |           ^^ pattern `&[false, _, _]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[_, ..]` not covered
  --> $DIR/slice-patterns.rs:50:11
   |
LL |     match s {
   |           ^ pattern `&[_, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[_, _, ..]` not covered
  --> $DIR/slice-patterns.rs:54:11
   |
LL |     match s {
   |           ^ pattern `&[_, _, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false, ..]` not covered
  --> $DIR/slice-patterns.rs:59:11
   |
LL |     match s {
   |           ^ pattern `&[false, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[false, _, ..]` not covered
  --> $DIR/slice-patterns.rs:64:11
   |
LL |     match s {
   |           ^ pattern `&[false, _, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[_, .., false]` not covered
  --> $DIR/slice-patterns.rs:70:11
   |
LL |     match s {
   |           ^ pattern `&[_, .., false]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: unreachable pattern
  --> $DIR/slice-patterns.rs:79:9
   |
LL |         [true, ..] => {}
   |         ^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/slice-patterns.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-patterns.rs:80:9
   |
LL |         [true] => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/slice-patterns.rs:85:9
   |
LL |         [.., true] => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-patterns.rs:86:9
   |
LL |         [true] => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/slice-patterns.rs:91:9
   |
LL |         [false, .., true] => {}
   |         ^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-patterns.rs:92:9
   |
LL |         [false, true] => {}
   |         ^^^^^^^^^^^^^

error[E0004]: non-exhaustive patterns: `&[_, _, .., true]` not covered
  --> $DIR/slice-patterns.rs:96:11
   |
LL |     match s {
   |           ^ pattern `&[_, _, .., true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[true, _, .., _]` not covered
  --> $DIR/slice-patterns.rs:103:11
   |
LL |     match s {
   |           ^ pattern `&[true, _, .., _]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 17 previous errors

For more information about this error, try `rustc --explain E0004`.
